# MAVLinkDroneControl

./: FIX_README.md  INSTALLATION_GUIDE.md  MAP_README.md  README.md  install_vlckit.sh
DroneControl/: ContentView.swift  DroneControl-Bridging-Header.h  DroneControlApp.swift  Info.plist  MapModels.swift  SettingsManager.swift
DroneControl.xcodeproj/: project.pbxproj
DroneControl/Assets.xcassets/AppIcon.appiconset/: Contents.json
DroneControl/MAVLink/: DroneControl-Bridging-Header.h  MAVLinkManager.swift  MAVLinkProtocol.swift  UDPConnection.swift
DroneControl/Models/: MapModels.swift
DroneControl/Views/: AttitudeIndicator.swift  ConnectionStatusView.swift  ControlPanelView.swift  EnhancedMapView.swift  FlightModeView.swift  JoystickView.swift  MainDashboardView.swift  MapView.swift  RTSPPlayerView.swift  ServoMonitorView.swift  SettingsView.swift  StatusBar.swift  VideoStreamView.swift
esp32-usb-cam-rtsp/: CMakeLists.txt  README.md  Unconfirmed 839467.crdownload  partitions.csv  platformio.ini  platformio.ini.espidf  sdkconfig.defaults  sdkconfig.esp32cam  sdkconfig.esp32s3
esp32-usb-cam-rtsp/components/espressif__usb_host_uvc/: .component_hash  idf_component.yml
esp32-usb-cam-rtsp/esp32-usb-cam-rtsp/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
esp32-usb-cam-rtsp/include/: mavlink_telemetry.h  mavlink_types.h  ov2640_camera.h  rtsp_server.h  usb_camera.h  wifi_ap.h
esp32-usb-cam-rtsp/src/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  mavlink_telemetry.c  ov2640_camera.c  rtsp_server.c  usb_camera.c  wifi_ap.c
(+10 files in other folders)
