idf_component_register(
    SRCS 
        "main.c"
        "wifi_ap.c"
        "mavlink_telemetry.c"
        "rtsp_server.c"
        "ov2640_camera.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        lwip
        driver
        esp_timer
        esp_psram
)
